unpackaged/main/default/objects/litify_fin__lit_Transaction__c/litify_fin__lit_Transaction__c.object-meta.xml
<CustomObject>
    <description>Default Transaction object.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>