unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suntrust 5501</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>