unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Client Costs</fullName>
            </value>
            <value>
                <fullName>Advanced Client Cost: Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>