unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Message__c</fullName>
    <label>Integration Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>