unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/Integration_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Sync_Status__c</fullName>
    <label>Integration Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Generate</fullName>
                <default>true</default>
                <label>Ready to Generate</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>