unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Account_Source__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Account_Source__c</fullName>
    <description>Specifies which financial account is providing or receiving money.</description>
    <label>Account</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Non-Ledger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>