unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Amount__c</fullName>
    <description>Total amount being transferred in this transaction</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>