unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Check_Info__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Check_Info__c</fullName>
    <description>The check data, such as a check number, for a the check related to this transaction.</description>
    <externalId>true</externalId>
    <label>Check Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>