unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Check_Number__c</fullName>
    <externalId>true</externalId>
    <label>Check #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>