unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Date_Paid__c</fullName>
    <description>The date this transaction was paid.</description>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>