unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>