unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Group_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Group_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Tab</label>
    <referenceTo>litify_fin__lit_Group_Template__c</referenceTo>
    <relationshipLabel>Group Template</relationshipLabel>
    <relationshipName>Group_Template</relationshipName>
    <type>Lookup</type>
</CustomField>