unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Is_Deletable_Child_Transaction__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Is_Deletable_Child_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if a child transaction record is deletable.</description>
    <label>Is Deletable Child Transaction</label>
    <type>Checkbox</type>
</CustomField>