unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Item__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Item__c</fullName>
    <description>Polymorphic lookup to the financial item record this transaction is for.</description>
    <externalId>true</externalId>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>