unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Memo__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Memo__c</fullName>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>