unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Method__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Method__c</fullName>
    <description>The method of transaction.</description>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Bill</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>