unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Originating_Subtab__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Originating_Subtab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Subtab</label>
    <referenceTo>litify_fin__lit_Item_Template__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>