unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Parent_Transaction__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Parent_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Transaction</label>
    <referenceTo>litify_fin__lit_Transaction__c</referenceTo>
    <relationshipLabel>Child Transactions</relationshipLabel>
    <relationshipName>Child_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>