unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Payor_Payee__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Payor_Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payor/Payee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>