unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Related_Record__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Related_Record__c</fullName>
    <description>Polymorphic lookup to the master object record this transaction is for.</description>
    <externalId>true</externalId>
    <label>Related Record</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>