unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Reporting_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Reporting_Amount__c</fullName>
    <formula>IF(ISPICKVAL(litify_fin__lit_Transaction_Type__c, &quot;Debit&quot;), -litify_fin__lit_Amount__c , litify_fin__lit_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>