unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Requested_Date__c</fullName>
    <description>The date this transaction was requested.</description>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>