unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Status__c</fullName>
    <description>The current status of this transaction.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>