unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Type__c</fullName>
    <description>Specifies if this transaction is crediting or debiting money to the source financial account.</description>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>