unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/litify_fin__lit_Transfer_Partner_Transaction__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transfer_Partner_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this transaction is involved in a transfer, this field points to the other transaction in the transfer.</description>
    <label>Transfer Partner Transaction</label>
    <referenceTo>litify_fin__lit_Transaction__c</referenceTo>
    <relationshipLabel>Transactions (Transfer Partner Transaction)</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>