unpackaged/main/default/objects/litify_fin__lit_Transaction__c/fields/Quickbooks_Job__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Job__c</fullName>
    <formula>Matter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quickbooks Job</label>
    <type>Text</type>
</CustomField>