unpackaged/main/default/objects/litify_fin__lit_Transaction__c/validationRules/litify_fin__lit_Negative_Amounts_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_fin__lit_Negative_Amounts_Not_Allowed</fullName>
    <active>true</active>
    <description>Rule to prevent users from entering in negative dollar amounts.</description>
    <errorConditionFormula>litify_fin__lit_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Cannot have negative amount.</errorMessage>
</ValidationRule>